--- a/Chrome/popup.css
+++ b/Chrome/popup.css
@@ -38,6 +38,10 @@ button:hover {
     color: #000;
 }
 
+hr {
+    border: 0.1px solid #808080;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #353736;
