--- a/docs/style.css
+++ b/docs/style.css
@@ -75,11 +75,11 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 900px;
     width: 100%;
     background-color: var(--bg-primary);
     border-radius: 12px;
-    padding: 2rem;
+    padding: 2rem 6rem;
     transition: all 0.6s ease;
     transform: translateY(0); /* Initial position */
 }
@@ -625,7 +625,7 @@ header p {
 @media (max-width: 640px) {
     .container {
         margin-top: 10%;
-        padding: 1.5rem 1rem;
+        padding: 1.5rem 1.5rem;
     }
 
     header {
@@ -655,9 +655,9 @@ header p {
         width: 92%;
     }
     
-    .link-buttons { 
+    /* .link-buttons { 
         grid-template-columns: 1fr; 
-    }
+    } */
 
     .fixed-controls {
         top: 0.75rem;
@@ -697,7 +697,7 @@ header p {
     }
 
     #urlInput { 
-        font-size: 12.5px; 
+        font-size: 14px; 
     }
 
     .search-input-container {
@@ -707,6 +707,12 @@ header p {
     .modal-content { 
         width: 95%; 
         margin: 10% auto; 
+    }
+
+    .link-btn { 
+        margin: 0 2rem;
+        padding: 0.8rem 1rem;
+        font-size: 14px;
     }
 }
 
